Kubernetes-Manifests-file/ingress/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  generation: 1
  name: frontend-ingress
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
    - frontend.app.soclabs.cm
    secretName: api-tls
  rules:
  - host: frontend.app.soclabs.cm
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 209.38.162.53
