Kubernetes-Manifests-file/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  generation: 1
  name: argo-ingress
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
    - backend.app.soclabs.cm
    secretName: api-tls
  rules:
  - host: backend.app.soclabs.cm
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 3500
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 209.38.162.53
